<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_share_preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_sharePreference"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/http_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share_preference" />

    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recycler_view_horizontal_test"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_http"
        app:layout_constraintStart_toStartOf="@+id/btn_http"
        app:layout_constraintTop_toBottomOf="@+id/btn_http" />

    <Button
        android:id="@+id/btn_recycler_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recycler_view_vertical_test"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_recycler_view"
        app:layout_constraintStart_toStartOf="@+id/btn_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/btn_recycler_view" />

    <Button
        android:id="@+id/btn_load_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/glide_load_img_test"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_recycler_view2"
        app:layout_constraintStart_toStartOf="@+id/btn_recycler_view2"
        app:layout_constraintTop_toBottomOf="@+id/btn_recycler_view2" />

    <Button
        android:id="@+id/btn_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/thread_test"
        app:layout_constraintEnd_toEndOf="@+id/btn_load_img"
        app:layout_constraintStart_toStartOf="@+id/btn_load_img"
        app:layout_constraintTop_toBottomOf="@+id/btn_load_img" />

    <Button
        android:id="@+id/btn_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/service_test"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_thread"
        app:layout_constraintStart_toStartOf="@+id/btn_thread"
        app:layout_constraintTop_toBottomOf="@+id/btn_thread" />

    <Button
        android:id="@+id/btn_lite_pal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/litepal_test"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_service"
        app:layout_constraintStart_toStartOf="@+id/btn_service"
        app:layout_constraintTop_toBottomOf="@+id/btn_service" />


</androidx.constraintlayout.widget.ConstraintLayout>